Add AI chatbot with Gemini and email service with Resend

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,14 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files
-.env*
+# env files (IMPORTANT: Never commit API keys!)
+.env
+.env.*
+.env.local
+.env.production
+*.env
+backend/.env
+backend/.env.*
 
 # vercel
 .vercel
