--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,5 @@ uvicorn[standard]==0.34.0
 pydantic[email]==2.10.5
 python-multipart==0.0.20
 python-dotenv==1.0.1
+google-generativeai==0.8.3
+resend==2.6.0
