--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
-    "deploy": "next build && npx gh-pages -d out -t true"
+    "deploy": "next build && npx gh-pages -d out -t"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
